Add developer journal entries

--- a/season-2/journal/2023-03-31.md
+++ b/season-2/journal/2023-03-31.md
@@ -57,3 +57,5 @@ So we'll probably do something like:
 1. Other person creates the contact, too.
 1. Each person adds the other to their hospex permissions.
 1. Display a list of person's confirmed contacts.
+
+It would also be nice to display contacts in common.
